--- a/ci/secrets.yml
+++ b/ci/secrets.yml
@@ -6,8 +6,8 @@ deployments: cf,apm
 jobs: ""
 repave-singleton-jobs: false
 perform-dry-run-only: true
-scheduler-time-window-start: 1:00 AM
-scheduler-time-window-stop: 2:00 AM
+scheduler-time-window-start: 2:40 PM
+scheduler-time-window-stop: 3:30 PM
 scheduler-time-location: America/Los_Angeles
 lock-git-repo-uri: ((git-repo-uri))
 lock-git-repo-branch: ((git-repo-branch))
