--- a/ci/secrets.yml
+++ b/ci/secrets.yml
@@ -2,10 +2,10 @@ opsman-url: ((opsman-url))
 opsman-username: ((opsman-user.username))
 opsman-password: ((opsman-user.password))
 skip-ssl-validation: true
-deployments: cf,apm
+deployments: cf
 jobs: ""
 repave-singleton-jobs: false
-perform-dry-run-only: true
+perform-dry-run-only: false
 scheduler-time-window-start: 10:15 AM
 scheduler-time-window-stop: 11:30 PM
 scheduler-time-location: America/Los_Angeles
