--- a/ci/secrets.yml
+++ b/ci/secrets.yml
@@ -3,10 +3,10 @@ opsman-username: ((opsman-user.username))
 opsman-password: ((opsman-user.password))
 skip-ssl-validation: true
 deployments: cf
-jobs: ""
+jobs: "diego_cell"
 repave-singleton-jobs: false
 perform-dry-run-only: false
-scheduler-time-window-start: 10:15 AM
+scheduler-time-window-start: 2:30 PM
 scheduler-time-window-stop: 11:30 PM
 scheduler-time-location: America/Los_Angeles
 lock-git-repo-uri: ((git-repo-uri))
