--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -15,6 +15,8 @@ jobs:
       OPSMAN_URL: {{opsman-url}}
       OPSMAN_USERNAME: {{opsman-username}}
       OPSMAN_PASSWORD: {{opsman-password}}
+      OPSMAN_CLIENT_ID: {{opsman_client_id}}
+      OPSMAN_CLIENT_SECRET: {{opsman_client_secret}}
       DEPLOYMENTS: {{deployments}}
       JOBS: {{jobs}}
       REPAVE_SINGLETON_JOBS: {{repave-singleton-jobs}}
@@ -28,8 +30,9 @@ resources:
 - name: bosh-repave-repo
   type: git
   source:
-    uri: https://github.com/pivotalservices/bosh-repave.git
+    uri: git@github.com:J4U-Nimbus/bosh-repave.git
     branch: master
+    private_key: {{git_private_key}}
 - name: scheduler
   type: time
   source:
